[package]
name = "fn-core"
version = "0.1.0"
authors = ["Kyle McCarthy <km@kylemccarthy.io>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
serde_cbor = "0.9.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde_yaml = "0.8.9"
fn-api = { path = "./../fn-api" }
parking_lot = "0.8.0"
actix-web = "1.0.2"
