[package]
name = "pod_fn"
version = "0.1.0"
authors = ["Kyle McCarthy <km@kylemccarthy.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.4.1"
actix-web = "1.0.0"
futures = "0.1.27"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
serde_yaml = "0.8.9"
bytes = "0.4.12"
